Removed unnecessary packages from package.json Fixed some z-index/scrolling issues with modal

--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,7 @@
 .pusher {
     margin-top: 5em;
 }
+
+.ReactModal__Body--open {
+    overflow-y: hidden;
+}
